--- a/expense-tracker/package.json
+++ b/expense-tracker/package.json
@@ -32,7 +32,9 @@
     "@angular/platform-server": "^21.1.0",
     "@angular/router": "^21.1.0",
     "@angular/ssr": "^21.1.0",
+    "@ng-select/ng-select": "^20.7.0",
     "express": "^5.1.0",
+    "flatpickr": "^4.6.13",
     "lucide-angular": "^0.562.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
