--- a/expense-tracker/package.json
+++ b/expense-tracker/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:vercel": "ng build --configuration=production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:expense-tracker": "node dist/expense-tracker/server/server.mjs"
