--- a/angular.json
+++ b/angular.json
@@ -29,10 +29,8 @@
               "src/styles.css"
             ],
             "server": "src/main.server.ts",
-            "outputMode": "server",
-            "ssr": {
-              "entry": "src/server.ts"
-            }
+            "outputMode": "static",
+            "prerender": true
           },
           "configurations": {
             "production": {
