Add GitHub Pages deployment configuration

--- a/angular.json
+++ b/angular.json
@@ -30,20 +30,22 @@
             ],
             "server": "src/main.server.ts",
             "outputMode": "static",
-            "prerender": true
+            "prerender": {
+              "discoverRoutes": false
+            }
           },
           "configurations": {
             "production": {
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "600kB",
+                  "maximumError": "1.5MB"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
+                  "maximumWarning": "12kB",
+                  "maximumError": "15kB"
                 }
               ],
               "outputHashing": "all"
